# backend_by_fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  config.py  containers.py  context_vars.py  database.py  database_models.py  docker-compose.yml  main.py  middlewares.py  nohup.out  order.txt  pyproject.toml  triggers.sql
common/: auth.py  logger.py  messaging.py
migrations/: env.py
migrations/versions/: 2025_01_20_0234-7629130c2df0_add_user_table.py  2025_01_20_0440-f19fbff962e2_user_add_memo.py  2025_01_23_1119-a793a42ce7c9_add_note_tag.py  2025_02_16_0937-1e61877c3ca3_add_studysession_studydata.py  2025_02_16_1227-ead815962998_modify_studydata.py  2025_02_16_1457-07b1dcdb189a_add_lazy.py  2025_02_16_1518-39bd62643ca0_delete_lazy.py  2025_02_16_1628-7c72a214adeb_add_cascade.py  2025_02_16_1638-31c9b0be437e_modify_cascade.py  2025_03_03_1849-deea6198fc34_reset.py  2025_03_03_1850-6af056385d18_add_trigger.py  2025_03_03_1911-5e4a46caa70d_add_unique.py  2025_03_04_0801-0cc31b1e2f99_reset.py  2025_03_04_0831-7f0ccb6227fc_reset.py  2025_03_18_0833-0b3249fe5ad9_apply_datetime.py  2025_03_18_0843-bbf58fafbc1e_apply_datetime2.py  2025_03_18_0900-bce470769204_modify1.py  2025_03_18_0901-ed1a32779e05_modify2.py  2025_03_26_1223-fea3d8e20a6b_add_ai_avg_focus.py
nginx/: Dockerfile  nginx.conf
note/application/: note_service.py
note/domain/: note.py
study/application/: study_service.py
study/domain/: study.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py
user/domain/: user.py
utils/: crypto.py  db_utils.py
(+37 files in other folders)
